--- a/index.html
+++ b/index.html
@@ -18,22 +18,15 @@
     </div>
     <ul class="list">
         <li class="zIndex">
-            <div class="next1">
-                <div class="loadBg">
-                    <div class="loading"><span class="progress"></span></div>
-                </div>
-                <div class="about">
-                    <div class="title"></div>
-                    <div class="pic"></div>
-                    <div class="content">
-                        <p>姓名：白晓艳</p>
-
-                        <p>毕业院校：河南经贸职业学院</p>
-
-                        <p>求职意向：前端开发</p>
-                    </div>
-                    <div class="bot"></div>
-                </div>
+            <div class="next1" id="next1">
+                <div class="title">
+                    <span class="span1"></span>
+                    <span class="span2"></span>
+                    <span class="span3"></span>
+                    <span class="span4"></span></div>
+                <div class="bg-round"></div>
+                <p class="bg-top"></p>
+                <p class="bot"></p>
             </div>
         </li>
         <li>
@@ -59,9 +52,19 @@
                 <p><span><em>技能六</em></span>掌握node.js的基本使用</p>
             </div>
         </li>
+        <li>
+            <div class="next4">
+                <p></p>
+                <p></p>
+                <p>扫二维码，看在线APP端简历</p>
+                <p class="xn"><span>为成功坚持</span><span>为希望前进</span></p>
+                <p class="xn"><span>为幸福奋斗</span><span>为自己而活</span></p>
+            </div>
+        </li>
     </ul>
 
 </div>
-</body>
+
 <script type="text/javascript" src="index.js"></script>
+</body>
 </html>
