--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                     <span class="span2"></span>
                     <span class="span3"></span>
                     <span class="span4"></span></div>
+                <div class="title-top"></div>
                 <div class="bg-round"></div>
                 <p class="bg-top"></p>
                 <p class="bot"></p>
