--- a/index.html
+++ b/index.html
@@ -19,11 +19,7 @@
     <ul class="list">
         <li class="zIndex">
             <div class="next1" id="next1">
-                <div class="title">
-                    <span class="span1"></span>
-                    <span class="span2"></span>
-                    <span class="span3"></span>
-                    <span class="span4"></span></div>
+                <div class="title"><span>个人简历</span></div>
                 <div class="title-top"></div>
                 <div class="bg-round"></div>
                 <p class="bg-top"></p>
@@ -32,7 +28,39 @@
         </li>
         <li>
             <div class="next2">
-                <div class="title"></div>
+                <div class="title"><span>基本信息</span></div>
+                <p><span></span>姓 名:白晓艳</p>
+                <p><span></span>毕业生院校:河南经贸学院</p>
+                <p><span></span>专 业:计算机多媒体</p>
+                <p><span></span>学 历:大专</p>
+                <p><span></span>出生日期:1989/04/24</p>
+                <p><span></span>电 话:18310975019</p>
+                <div class="qz">求职意向：Web前端工程师</div>
+            </div>
+        </li>
+        <li>
+            <div class="next3">
+                <div class="title"><span>项目经验</span></div>
+                <div class="ps">
+                    <div class="ps1">
+                        <p class="img1"><img src="images/photo.png"/></p>
+                        <p>北京宸康科技公司官网<span>利用css+div制作静态页面样式，使用JS编写页面的交互效果</span></p>
+                    </div>
+                    <div class="ps1">
+                        <p class="img1"><img src="images/photo.png"/></p>
+                        <p>北京宸康科技公司官网<span>利用css+div制作静态页面样式，使用JS编写页面的交互效果</span></p>
+                    </div>
+                    <div class="ps1">
+                        <p class="img1"><img src="images/photo.png"/></p>
+                        <p>北京宸康科技公司官网<span>利用css+div制作静态页面样式，使用JS编写页面的交互效果</span></p>
+                    </div>
+                </div>
+            </div>
+        </li>
+
+        <li>
+            <div class="next4">
+                <div class="title"><span>IT技能</span></div>
                 <div class="center"></div>
                 <p>熟悉jQuery</p>
                 <p>精通原生js</p>
@@ -43,8 +71,8 @@
             </div>
         </li>
         <li>
-            <div class="next3">
-                <div >应用范围</div>
+            <div class="next5">
+                <div class="title"><span>应用范围</span></div>
                 <p><span><em>技能一</em></span>熟练掌握html、div+css，手写符合w3c标准的页面代码</p>
                 <p><span><em>技能二</em></span>能运用html5、css3进行移动端的页面开发</p>
                 <p><span><em>技能三</em></span>熟悉观察者设计模式</p>
@@ -54,7 +82,7 @@
             </div>
         </li>
         <li>
-            <div class="next4">
+            <div class="next6">
                 <p></p>
                 <p></p>
                 <p>扫二维码，看在线APP端简历</p>
