--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <div class="main">
     <div class="sound">
-        <audio src="images/music.mp3" loop id="music"></audio>
+        <audio src="images/music.mp3" preload="none" loop/>
     </div>
     <div class="toTop">
         <span></span>
@@ -93,7 +93,6 @@
     </ul>
 
 </div>
-
 <script type="text/javascript" src="index.js"></script>
 </body>
 </html>
