--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 <div class="main">
-    <div class="sound">
-        <audio src="images/music.mp3" preload="none" loop/>
+    <div class="sound move">
+        <audio src="images/music.mp3" autoplay loop id="music"/>
     </div>
     <div class="toTop">
         <span></span>
